namespaces/seve/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harlock-ingress
  namespace: seve
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "seve.harlock.fr | api.seve.harlock.fr"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "seve.harlock.fr"
    secretName: seve-harlock-fr-tls
  - hosts:
    - "api.seve.harlock.fr"
    secretName: api-seve-harlock-fr-tls
  rules:
  - host: "seve.harlock.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: "api.seve.harlock.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
